<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mero Bhada Meter</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="faredetails">Please Select the Starting Point and the Destination in order to get fare details</string>
    <string name="normal_taxi">Normal Taxi (Black Number Plate)</string>
    <string name="tourist_taxi">Tourist Taxi (Green Number Plate)</string>
    <string name="select_vehicle">Please Select the type of Vehicle</string>
    <string name="departure">Departure</string>
    <string name="set_departure">Set Departure</string>
    <string name="destination">Destination</string>
    <string name="set_destination">Set Destination</string>
    <string name="viapoint">Via-Point</string>
    <string name="add_viapoint">Add Via-Point</string>
    <string name="reset_markers">Reset Markers</string>
    <string name="distance">Distance: </string>
    <string name="rate">Rate:     </string>
    <string name="fare">Fare:     </string>
    <string name= "fare_amnt">Fare Amount </string>
    <string name="distance_value">0.00 </string>
    <string name="rate_value">0.00     </string>
    <string name="fare_value">0.00     </string>
    <string name="search">Search</string>
    <string name = "cancel">Cancel</string>
    <string name="action_search">Search</string>
    <string name="action_download">Download</string>
    <string name="action_offline">Make Offline</string>
    <string name="action_track">Start Tracking</string>
    <string name="action_stop_track">Start Tracking</string>
    <string name="tracking_in_progress">Tracking is current enabled.</string>
    <string name="tracking_stopped">Tracking has been stopped.</string>
    <string name="action_preference">Preferences</string>

</resources>